# Quark

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  lexer.cpp  lexer.hpp  lint.sh  main.cpp  main.qrk  parser.cpp  parser.hpp
.github/workflows/: build-and-lint.yml  build.yml  lint.yml
include/: constants.hpp  lexer.hpp  parser.hpp
includes/: constants.hpp  lexer.hpp  parser.hpp  utils.hpp
src/: lexer.cpp  main.cpp  parser.cpp  utils.cpp
